my-exercise-to-3.1

--- a/1-reactivity/1.1-getter-setter.html
+++ b/1-reactivity/1.1-getter-setter.html
@@ -1,5 +1,17 @@
 <script>
-function convert (obj) {
-  // Implement this!
-}
+  function convert(obj) {
+    Object.keys(obj).forEach(key => {
+      let value = obj[key]
+      Object.defineProperty(obj, key, {
+        get() {
+          console.log(`getting key "${key}": ${value}`);
+          return value
+        },
+        set(newValue) {
+          console.log(`setting key "${key}" to: ${newValue}`);
+          value = newValue
+        }
+      })
+    })
+  }
 </script>
