--- a/3-render-function/3.3-higher-order-component.html
+++ b/3-render-function/3.3-higher-order-component.html
@@ -20,6 +20,27 @@ const Avatar = {
 
 function withAvatarURL (InnerComponent) {
   // Implement this!
+  return {
+    props: ['username'],
+    data() {
+      return {
+        src: 'http://via.placeholder.com/200x200'
+      }
+    },
+    created() {
+      fetchURL(this.username, url => this.src = url)
+    },
+    render (h) {
+      return h(
+        InnerComponent,
+        {
+          props: {
+            src: this.src
+          }
+        }
+      )
+    }
+  }
 }
 
 const SmartAvatar = withAvatarURL(Avatar)
