--- a/4-state-management/4.2-shared-object.html
+++ b/4-state-management/4.2-shared-object.html
@@ -12,12 +12,28 @@
 // all instances of it should share the same count state
 // and a button that increments all counters at the same time
 
+const state = {
+  count: 0,
+}
+
 const Counter = {
   // Implement this!
+  data() {
+    return state
+  },
+  template: `<div>{{ count }}</div>`
 }
 
 new Vue({
   el: '#app',
   // Implement this!
+  components: {
+    counter: Counter
+  },
+  methods: {
+    inc() {
+      state.count++;
+    }
+  }
 })
 </script>
