--- a/7-i18n/7.1-simple-i18n.html
+++ b/7-i18n/7.1-simple-i18n.html
@@ -10,6 +10,11 @@
 <script>
 const i18nPlugin = {
   // Implement this!
+  install: function(Vue, options) {
+    Vue.prototype.$t = function(key) {
+      return options[this.$root.lang][key]
+    }
+  }
 }
 
 Vue.use(i18nPlugin, /* option */ {
