--- a/4-state-management/4.3-shared-instance-store.html
+++ b/4-state-management/4.3-shared-instance-store.html
@@ -1,6 +1,6 @@
 <script src="../node_modules/vue/dist/vue.js"></script>
 
-<div>
+<div id="app">
   <counter></counter>
   <counter></counter>
   <counter></counter>
@@ -8,18 +8,35 @@
 </div>
 
 <script>
-// copy and modify the first exercise to use a Vue instance as
-// a shared store instead.
-const state = new Vue({
-  // Implement this!
-})
+  // copy and modify the first exercise to use a Vue instance as
+  // a shared store instead.
+  const state = new Vue({
+    // Implement this!
+    data: {
+      count: 0
+    },
+    methods: {
+      inc() {
+        state.count++
+      }
+    }
+  })
 
-const Counter = {
-  // Implement this!
-}
+  const Counter = {
+    // Implement this!
+    render(h) {
+      return h('div', state.count)
+    }
+  }
 
-new Vue({
-  el: '#app',
-  // Implement this!
-})
+  new Vue({
+    el: '#app',
+    // Implement this!
+    components: {
+      Counter
+    },
+    methods: {
+      inc: state.inc
+    }
+  })
 </script>
