--- a/4-state-management/4.5-functional.html
+++ b/4-state-management/4.5-functional.html
@@ -3,24 +3,40 @@
 <div id="app"></div>
 
 <script>
-function app ({ el, model, view, actions }) {
-  // Implement this!
-}
+  function app({ el, model, view, actions }) {
+    // Implement this!
+    const methods = {}
+    Object.keys(actions).forEach(actionKey => {
+      const action = actions[actionKey]
+      methods[actionKey] = function () {
+        const newModel = action(vm.model)
+        vm.model = newModel
+      }
+    })
 
-// voila
-app({
-  el: '#app',
-  model: {
-    count: 0
-  },
-  actions: {
-    inc: ({ count }) => ({ count: count + 1 }),
-    dec: ({ count }) => ({ count: count - 1 })
-  },
-  view: (h, model, actions) => h('div', [
-    model.count, ' ',
-    h('button', { on: { click: actions.inc }}, '+'),
-    h('button', { on: { click: actions.dec }}, '-')
-  ])
-})
+    const vm = new Vue({
+      el,
+      data: { model },
+      render(h) {
+        return view(h, this.model, methods)
+      }
+    })
+  }
+
+  // voila
+  app({
+    el: '#app',
+    model: {
+      count: 0
+    },
+    actions: {
+      inc: ({ count }) => ({ count: count + 1 }),
+      dec: ({ count }) => ({ count: count - 1 })
+    },
+    view: (h, model, actions) => h('div', { attrs: { id: 'app' }}, [
+      model.count, ' ',
+      h('button', { on: { click: actions.inc } }, '+'),
+      h('button', { on: { click: actions.dec } }, '-')
+    ])
+  })
 </script>
