--- a/5-routing/5.1-basic-hash-router.html
+++ b/5-routing/5.1-basic-hash-router.html
@@ -1,16 +1,16 @@
 <script src="../node_modules/vue/dist/vue.js"></script>
 <script>
-// goal:
-// - display foo when url is at #foo
-// - display bar when url is at #bar
-// - bonus: implement links that navigate between #foo and #bar
+  // goal:
+  // - display foo when url is at #foo
+  // - display bar when url is at #bar
+  // - bonus: implement links that navigate between #foo and #bar
 
-// to access the current hash:
-window.location.hash
-// to listen for hash changes:
-window.addEventListener('hashchange', () => {
-  // read hash and update app
-})
+  // to access the current hash:
+  window.location.hash
+  // to listen for hash changes:
+  window.addEventListener('hashchange', () => {
+    // read hash and update app
+  })
 </script>
 
 <div id="app">
@@ -20,12 +20,25 @@ window.addEventListener('hashchange', () => {
 </div>
 
 <script>
-window.addEventListener('hashchange', () => {
-  // Implement this!
-})
 
-const app = new Vue({
-  el: '#app',
-  // Implement this!
-})
+  window.addEventListener('hashchange', () => {
+    // Implement this!
+    app.url = window.location.hash.slice(1)
+  })
+
+  const app = new Vue({
+    el: '#app',
+    // Implement this!
+    data: {
+      url: window.location.hash.slice(1)
+    },
+    components: {
+      foo: {
+        template: '<div>foo</div>'
+      },
+      bar: {
+        template: '<div>bar</div>'
+      }
+    }
+  })
 </script>
