--- a/5-routing/5.3-path-to-regexp.html
+++ b/5-routing/5.3-path-to-regexp.html
@@ -1,56 +1,73 @@
 <script src="../node_modules/vue/dist/vue.js"></script>
-<script src="https://wzrd.in/standalone/path-to-regexp"></script>
+<script src="./path-to-regexp.js"></script>
 
 <div id="app"></div>
 
 <script>
-// '#/foo/123' -> foo with id: 123
-// '#/bar' -> Bar
-// '#/404' -> NotFound
+  // '#/foo/123' -> foo with id: 123
+  // '#/bar' -> Bar
+  // '#/404' -> NotFound
 
-// path-to-regexp usage:
-// const regex = pathToRegexp(pattern)
-// const match = regex.exec(path)
-// const params = regex.keys.reduce((params, key, index) => {
-//   params[key] = match[index + 1]
-// }, {})
+  // path-to-regexp usage:
+  // const regex = pathToRegexp(pattern)
+  // const match = regex.exec(path)
+  // const params = regex.keys.reduce((params, key, index) => {
+  //   params[key] = match[index + 1]
+  // }, {})
 
-const Foo = {
-  props: ['id'],
-  template: `<div>foo with id: {{ id }}</div>`
-}
-const Bar = { template: `<div>bar</div>` }
-const NotFound = { template: `<div>not found!</div>` }
-
-const routeTable = {
-  // Implement this!
-}
-
-window.addEventListener('hashchange', () => {
-  // Implement this!
-})
-
-const app = new Vue({
-  el: '#app',
-  data: {
-    url: window.location.hash.slice(1)
-  },
-  render (h) {
-    const path = '/' + this.url
-
-    let componentToRender
-    let props = {}
-
-    // Implement the logic to figure out proper values
-    // for componentToRender and props
-
-    return h('div', [
-      h(componentToRender, { props }),
-      h('a', { attrs: { href: '#foo/123' }}, 'foo'),
-      h('a', { attrs: { href: '#foo/234' }}, 'foo'),
-      ' | ',
-      h('a', { attrs: { href: '#bar' }}, 'bar')
-    ])
+  const Foo = {
+    props: ['id'],
+    template: `<div>foo with id: {{ id }}</div>`
   }
-})
+  const Bar = { template: `<div>bar</div>` }
+  const NotFound = { template: `<div>not found!</div>` }
+
+  const routeTable = {
+    // Implement this!
+    'foo/:id': Foo,
+    'bar': Bar,
+  }
+
+  window.addEventListener('hashchange', () => {
+    // Implement this!
+    app.url = window.location.hash.slice(1)
+  })
+
+  const app = new Vue({
+    el: '#app',
+    data: {
+      url: window.location.hash.slice(1)
+    },
+    render(h) {
+      const path = '/' + this.url
+
+      let componentToRender
+      let props = {}
+
+      // Implement the logic to figure out proper values
+      // for componentToRender and props
+
+      Object.keys(routeTable).forEach(routeName => {
+        const keys = []
+        const regex = pathToRegexp('/' + routeName, keys)
+        const match = regex.exec(path)
+
+
+        if (match) {
+          componentToRender = routeTable[routeName]
+          props = keys.length ? {
+            [keys[0].name]: match[1]
+          } : {}
+        }
+      })
+
+      return h('div', {attrs: {id: 'app'}}, [
+        h(componentToRender || NotFound, { props }),
+        h('a', { attrs: { href: '#foo/123' } }, 'foo'),
+        h('a', { attrs: { href: '#foo/234' } }, 'foo'),
+        ' | ',
+        h('a', { attrs: { href: '#bar' } }, 'bar')
+      ])
+    }
+  })
 </script>
